<resources>
    <string name="app_name">PacemakerEpisodeStatistics</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_episode_statistic_details">EpisodeStatisticDetails</string>

    <string name="episode_type">Episode type:</string>
    <string name="amount">Amount:</string>
    <string name="percent">Percentage:</string>
    <string name="graph">See graph</string>

    <string name="textone">Episode type</string>
    <string name="texttwo">Transmissions</string>
    <string name="textthree">Transmission %</string>

    <string name="pictureBtn">Pictures</string>
    <string name="closePicBtn">Close pictures</string>
    <string name="seepicz">See pictures</string>

    <string name="pacemakersImplanted">Pacemakers implanted worldwide since you started this activity: </string>


    <string name ="jan">Jan</string>
    <string name ="feb">Feb</string>
    <string name ="mar">Mar</string>
    <string name ="apr">Apr</string>
    <string name ="may">May</string>
    <string name ="jun">Jun</string>
    <string name ="jul">Jul</string>
    <string name ="aug">Aug</string>
    <string name ="sep">Sep</string>
    <string name ="oct">Oct</string>
    <string name ="nov">Nov</string>
    <string name ="dec">Dec</string>

</resources>
