<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/statistic_details_layout"
    tools:context="android.zonro.com.e15.grp15.pacemakerepisodestatistics.EpisodeStatisticDetails">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewEpisodeType"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/episode_type"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewEpisodeTypeSet"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/textViewEpisodeType"
        android:layout_marginTop="15dp"
        android:text="textxxxtxttx"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewAmount"
        android:layout_below="@+id/textViewEpisodeType"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/amount"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewAmountSet"
        android:layout_below="@+id/textViewEpisodeType"
        android:layout_marginTop="5dp"
        android:text="21"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/textViewAmount"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewPercent"
        android:layout_below="@+id/textViewAmount"
        android:layout_marginTop="10dp"
        android:text="@string/percent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewPercentSet"
        android:layout_below="@+id/textViewAmount"
        android:layout_marginTop="10dp"
        android:text="50 %"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/textViewPercent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewGraf"
        android:layout_below="@+id/textViewPercent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/ImageButton01"
        android:text="@string/graph"/>

    <ImageButton
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:id="@+id/ImageButton01"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textViewPercent"
        android:src="@drawable/btn_graph"
        android:scaleType="fitCenter"
        android:onClick="SeeGraph"/>

    <ImageButton
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:id="@+id/ImageButton02"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ImageButton01"
        android:src="@drawable/picturebtn"
        android:scaleType="fitCenter"
        android:onClick="StartPictures" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:text="@string/seepicz"
        android:layout_alignBottom="@+id/ImageButton02"
        android:layout_alignLeft="@+id/textViewGraf"
        android:layout_alignStart="@+id/textViewGraf"
        android:layout_marginBottom="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pacemakersImplanted"
        android:id="@+id/textView2"
        android:layout_below="@+id/ImageButton02"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp" />

</RelativeLayout>
